fix unnecessary horizontal scroll on small viewports in about section

--- a/assets/home/about.css
+++ b/assets/home/about.css
@@ -32,6 +32,7 @@
 
             max-width: calc(var(--picture-width) * 2.5);
             width: 100%;
+            overflow: hidden;
 
             .container {
                 margin-top: 4rem;
